2004-07-15 Magnus Hagdorn
 * glint_timestep.f90: must apply climate forcing every time step

2004-07-15 Magnus Hagdorn
 * glide_setup.f90: initialise tau0 which somehow escaped initialisation
 * fixed check when netCDF should be read from/written to(ncdf.f90.in, ncdf_file.f90.in, ncdf_infile.f90.in)
 * glimmer_proj.f90: fixed minor bug and renamed config file section
 * glint_climate.f90: renamed glimmer_lapserate to glint_lapserate
 * glint_initialise.f90: fixed api and added some proj initialisation
 * glint_io.f90.in: minor compile fixes
 * glint_timestep.f90: renamed some subroutines from glimmer_ to glint_
 * updated to use new glint stuff (glimmer.f90, bin2ncdf.f90, input2ncdf.f90, glimmer_example.f90, test_setup.f90)
 * updated greenland input file
	
2004-07-14 Magnus Hagdorn
 * glint_timestep.f90: timestep of glint instance

2004-07-13 Magnus Hagdorn
 * glimmer_degd.f90: load sp from glimmer_global
 * renamed module glimmer_ to glint_ (glimmer_global_grid.f90, glimmer_interp.f90, 
	glimmer_mbal.f90, glimmer_proj.f90)
 * removed old glimmer modules (glimmer_modu.f90, glimmer_object.f90, glimmer_outp.f90, 
	glimmer_setup.f90, glint_object.f90)
 * glint_type.f90: derived type definition of GLINT instance
 * glint_climate.f90: climate driver for GLINT 
 * initialise/finalise GLINT: glint_initialise.f90
 * glint_io.f90.in: added read/write_all functions
 * moved where netCDF file I/O happens (ncdf_file.f90.in, ncdf_infile.f90.in)
	
2004-07-09 Magnus Hagdorn
 * glimmer_proj.f90: added configuration read/print routines
 * glimmer_degd.f90: moved derived type definition into module
 * moved read/write new time slice logic to new procedure glimmer_nc_check[read|write]
   (ncdf.f90.in, ncdf_file.f90.in, ncdf_infile.f90.in)
 * glint_object.f90: first bits of setting up glint
 * custom netCDF I/O for GLINT related variables (glint_io.f90.in, ncdf_vars.def)
 * generate_ncvars.py: generate I/O functions for custom I/O
	
2004-07-08 Magnus Hagdorn